# autokernel

./: .gitignore  README.md  analysis.py  bench.py  extract.py  orchestrate.py  prepare.py  profile.py  program.md  pyproject.toml  reference.py  verify.py
kernels/: conv1d.py  conv_transpose1d.py  reduce.py  rotary_embedding.py  snake_activation.py
models/: dacvae.py
