[project]
name = "autokernel"
version = "1.0.0"
description = "Autonomous AI agents optimizing GPU kernels overnight -- for any PyTorch model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "soundfile>=0.13.1",
    "torch==2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.10.0",
    "triton>=3.3.0",
]

[project.optional-dependencies]
# Model ingestion: profile and optimize any PyTorch model
models = [
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
    "safetensors>=0.5.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
